myprofile/Booking Summary - changes 5 - 15-03-2023

--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -5,7 +5,7 @@
         <mat-form-field appearance="outline">
           <mat-label>Select Resort</mat-label>
           <mat-select required [(ngModel)]="selectedResort" [(value)]="selectedResort">
-            <mat-option value="vanaVihari">Vanavihari, Maredumilli</mat-option>
+            <mat-option value="vanavihari">Vanavihari, Maredumilli</mat-option>
             <mat-option value="jungle-star">Jungle Star, Valamuru</mat-option>
           </mat-select>
         </mat-form-field>
