--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -43,15 +43,15 @@
                         </div>
                         <div class="card">
                             <h5>Room & Guests Details</h5>
-                            <p>Total Number of Rooms: <span id="totalRooms">1</span></p>
-                            <p>Adults: 2</p>
-                            <p>Children: 0</p>
+                            <p>Total Number of Rooms: <span id="totalRooms">{{roomsCount}}</span></p>
+                            <p>Adults: {{adultsCount}}</p>
+                            <p>Children: {{childrenCount}}</p>
+                            <p>Guests: {{roomsCount}}</p>
                             <a class="font-weight-bold" (click)="goToVanavihari()">Change your selection</a>
                         </div>
                         <div class="card">
                             <h5>Payment details</h5>
                             <p><strong>Room price per night:</strong> INR 4000</p>
-                            <p><strong>Total no. of guests:</strong> 2</p>
                             <!-- <p>Total room tarri: 5400</p> -->
                             <p><strong>GST @12%:</strong> INR 480</p>
                             <h4><strong>Total price:</strong> INR 6372</h4>
@@ -90,41 +90,40 @@
                         <h5 class="mb-4" style="line-height: 1.5;">Check the details we have fetched from your user
                             account Balachandiran!</h5>
                         <!-- <h3>User Details</h3> -->
-                        <form>
+                        <form [formGroup]="form">
                             <mat-form-field appearance="outline">
                                 <mat-label>Guest Name</mat-label>
-                                <input type="text" matInput required value="Balachandiran B" />
+                                <input type="text" matInput required formControlName="full_name" placeholder="Enter Full Name" />
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Mobile no.</mat-label>
-                                <input type="tel" matInput required value="9840166419" />
+                                <input type="tel" matInput required placeholder="Enter Mobile Number" formControlName="mobile_number" />
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Email</mat-label>
-                                <input type="email" matInput required value="tensketch285@gmail.com" />
+                                <input type="email" matInput required placeholder="Enter Email Address" formControlName="email" />
                             </mat-form-field>
-                            <!-- address -->
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Address</mat-label>
-                                <input type="text" matInput required placeholder="Enter your address">
+                                <input type="text" matInput required placeholder="Enter your address" formControlName="address1">
                             </mat-form-field>
-                            <!-- city, state, country, pincode -->
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>City</mat-label>
-                                <input type="text" matInput required placeholder="Enter your city">
+                                <input type="text" matInput required placeholder="Enter your city" formControlName="city">
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>State</mat-label>
-                                <input type="text" matInput required placeholder="Enter your state">
+                                <input type="text" matInput required placeholder="Enter your state" formControlName="state" >
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Country</mat-label>
-                                <input type="text" matInput required placeholder="Enter your country">
+                                <input type="text" matInput required placeholder="Enter your country" formControlName="country" >
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Pincode</mat-label>
-                                <input type="tel" matInput required placeholder="Enter your pincode">
+                                <input type="tel" matInput required placeholder="Enter your pincode" formControlName="pincode" >
                             </mat-form-field>
+                            <button class="btn btn-primary w-100 mt-1">Submit</button>
                             <section class="booking-terms mt-4">
                                 <h5 class="mb-3">Review the terms before booking.</h5>
                                 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -187,7 +186,7 @@
                                     </div>
                                 </div>
                             </section>
-                            <button mat-raised-button color="primary" class="w-100 mt-3">Pay now</button>
+                            <!-- <button mat-raised-button color="primary" class="w-100 mt-3">Pay now</button> -->
                         </form>
                     </div>
                 </div>
