--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -3,7 +3,7 @@ $hue-primary: 90;
 $saturation-primary: 100%;
 $lightness-primary: 10%;
 
-$clr-primary: hsl(90, 100%, 30%); //339ad7
+$clr-primary: hsl(90, 100%, 30%); //4d9900
 $clr-primary-dark: hsl(90, 100%, 20%);
 $clr-primary-light: hsl(90, 100%, 70%);
 
