layout, searh btn empty mofal

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -171,19 +171,22 @@
           Community Based Eco-Tourism, <br>
           Maredumilli.
         </address>
-        <ul class="list-unstyled">
-          <li class="mt-2"> <i class="fa fa-phone" aria-hidden="true"></i><a class="text-decoration-none" href="mailto:info@vanavihari.com"
-              title="click to send email">info@vanavihari.com</a>
-          </li>
-          <li class="mt-2">
-            <!-- font awesome email -->
-            <i class="fa fa-envelope" aria-hidden="true"></i><a class="text-decoration-none" href="tel:+919494151617" title="call">9494151617</a>
-          </li>
-        </ul>
+       
 
 
       </div>
       <div class="col-md-4">
+        <ul class="list-unstyled">
+          <li class="mt-2"> <i class="fa fa-phone me-2" aria-hidden="true"></i><a class="text-decoration-none" href="mailto:info@vanavihari.com"
+              title="click to send email">info@vanavihari.com</a>
+          </li>
+          <li class="mt-2">
+            <!-- font awesome email -->
+            <i class="fa fa-envelope me-2" aria-hidden="true"></i><a class="text-decoration-none" href="tel:+919494151617" title="call">9494151617</a>
+          </li>
+        </ul>
+      </div>
+      <!-- <div class="col-md-4">
         <h3>Send a message</h3>
         <form >
           <mat-form-field appearance="outline" class="mt-3">
@@ -211,7 +214,7 @@
             Send
           </button>
         </form>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
