--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-3">
         <mat-form-field appearance="outline">
           <mat-label>Select Resort</mat-label>
-          <mat-select required [(ngModel)]="selectedResort" [(value)]="selectedResort">
+          <mat-select required [(ngModel)]="selectedResort" name="SelectResort" [(value)]="selectedResort">
             <mat-option value="vanavihari">Vanavihari, Maredumilli</mat-option>
             <mat-option value="jungle-star">Jungle Star, Valamuru</mat-option>
           </mat-select>
@@ -14,8 +14,8 @@
         <mat-form-field appearance="outline">
           <mat-label>Checkin & Checkout</mat-label>
           <mat-date-range-input [rangePicker]="picker" (click)="picker.open()">
-            <input matStartDate placeholder="Checkin date" [(ngModel)]="checkinDate" (dateChange)="onDateChange('checkin', $event)"/>
-            <input matEndDate placeholder="Checkout date" [(ngModel)]="checkoutDate" (dateChange)="onDateChange('checkout', $event)"/>
+            <input matStartDate placeholder="Checkin date" [(ngModel)]="checkinDate" name="CheckinDate" (dateChange)="onDateChange('checkin', $event)"/>
+            <input matEndDate placeholder="Checkout date" [(ngModel)]="checkoutDate" name="CheckOutDate" (dateChange)="onDateChange('checkout', $event)"/>
           </mat-date-range-input>
           <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -23,109 +23,14 @@
         </mat-form-field>
         
       </div>
-      <!-- <div class="col-lg-3 position-relative">
-        <mat-form-field appearance="outline">
-          <mat-label>Guests</mat-label>
-          <input type="text" [value]="RoomValues" matInput data-bs-toggle="modal" data-bs-target="#modalId" />
-        </mat-form-field>
-        <!-- modal for adding guests, children and rooms --/>
-        <div class="modal fade position-absolute modal-searchbar" id="modalId" tabindex="-1"
-          aria-labelledby="modalTitleId" aria-hidden="true" role="dialog" data-bs-backdrop="static">
-          <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-body">
-                <!-- Angular Material form fields for adults, children, rooms --/>
-                <!-- Adults section --/>
-                <div class="row mt-3">
-                  <label for="adults" class="col-sm-6">No. of Adults:</label>
-                  <div class="col-sm-6">
-                    <div class="input-group">
-                      <button class="btn" type="button" (click)="decrementAdults()">
-                        -
-                      </button>
-                      <input type="number" id="adultsCount" name="adults" class="form-control text-center"
-                        [(ngModel)]="adultsCount" />
-                      <button class="btn" type="button" (click)="incrementAdults()">
-                        +
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <!-- Children section --/>
-                <div class="row my-3">
-                  <label for="children" class="col-sm-6">No. of Children:</label>
-                  <div class="col-sm-6">
-                    <div class="input-group">
-                      <button class="btn" type="button" (click)="decrementChildren()">
-                        -
-                      </button>
-                      <input type="number" id="childrenCount" name="children" class="form-control text-center"
-                        [(ngModel)]="childrenCount" />
-                      <button class="btn" type="button" (click)="incrementChildren()" [disabled]="isMaxReached">
-                        +
-                      </button>
-                    </div>
-                    <div *ngIf="isMaxReached" class="text-danger mt-2">
-                      Maximum limit reached for children ({{ maxChildren }}).
-                    </div>
-                  </div>
-                </div>
-                <!-- Age dropdowns --/>
-                <div id="ageDropdowns">
-                  <div class="col-auto" *ngFor="let i of getChildrenCountArray()">
-                    <select class="form-select mb-3" name="childAge" [(ngModel)]="selectedAges[i]">
-                      <option value="" disabled>Age required</option>
-                      <option value="0-2">0 - 2 years</option>
-                      <option value="3-5">3 - 5 years</option>
-                      <option value="6-10">6 - 10 years</option>
-                    </select>
-                  </div>
-                </div>
-                <!-- Rooms section --/>
-                <div class="row">
-                  <label for="rooms" class="col-sm-6">No. of Rooms:</label>
-                  <div class="col-sm-6">
-                    <div class="input-group">
-                      <button class="btn" type="button" (click)="decrementRooms()">
-                        -
-                      </button>
-                      <input type="number" id="roomsCount" name="rooms" class="form-control text-center"
-                        [(ngModel)]="roomsCount" />
-                      <button class="btn" type="button" (click)="incrementRooms()">
-                        +
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button mat-raised-button color="primary" type="button" class="w-100" data-bs-dismiss="modal"
-                  (click)="getvalues(roomsCount, adultsCount)">
-                  Done
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+      
       <div class="col-lg-3">
         <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button> -->
 
-<<<<<<< HEAD
-        <button mat-raised-button color="primary" class="w-100" (click)="goToRooms()">
-=======
         <button mat-raised-button color="primary" class="w-100" [disabled]="searchForm.invalid" (click)="goToVanavihari()">
->>>>>>> 0cb8ff474a9d2dc2ae8b2b65c97c08f2a7b9d4b7
           Search
         </button>
-        <!-- <button
-          mat-raised-button
-          color="primary"
-          class="w-100"
-          (click)="goToResort()"
-        >
-          Search
-        </button> -->
+       
       </div>
     </div>
   </form>
