--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -60,8 +60,33 @@
             </mat-form-field>
           </div>
           <!-- Booking Summary section -->
-          <div class="booking-summary-bar" *ngIf="showBookingSummary; else noBookings">
+          <div class="booking-summary-bar">
             <h5><u>Booking Summary</u></h5>
+            <h6>Cottage Type</h6>
+            <div class="d-flex  justify-content-between">
+                <span>Bonnet</span>
+                <span><i class="fa fa-trash"></i></span>
+            </div>
+            <div class="d-flex justify-content-between">
+              <span>Room Tariff</span>
+              <span>INR 2,500.00</span>
+            </div>
+            <div class="d-flex justify-content-between">
+              <span>GST @ 12%</span>
+              <span>INR 300.00</span>
+            </div>
+            <div class="d-flex justify-content-between">
+              <span>Total</span>
+              <span>INR 3,000.00</span>
+            </div>
+            <!-- Additional rooms will be added here -->
+            <div class="d-flex justify-content-between">
+              <span>Grand Total</span>
+              <span>INR 3,000.00</span>
+            </div>
+          
+          </div>
+          <div class="booking-summary-bar" *ngIf="showBookingSummary; else noBookings">
             <div *ngFor="let roomId of roomIds" class="card mb-3 p-2">
               <div class="row align-items-center">
                 <div class="col-md-10">
