--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -30,16 +30,16 @@
                             <div class="d-flex">
                                 <div class="col">
                                     <p>Check-in</p>
-                                    <h6>March 9 2024</h6>
+                                    <h6>{{checkInDate}}</h6>
                                     <p>10:00 AM IST</p>
                                 </div>
                                 <div class="col">
                                     <p>Check-out</p>
-                                    <h6>March 17 2024</h6>
+                                    <h6>{{checkOutDate}}</h6>
                                     <p>09:00 AM IST</p>
                                 </div>
                             </div>
-                            <p>Duration of stay:<br><strong>1 week</strong></p>
+                            <p>Duration of stay:<br><strong>{{durationOfStay}} week</strong></p>
                         </div>
                         <div class="card">
                             <h5>Room & Guests Details</h5>
@@ -93,37 +93,37 @@
                         <form [formGroup]="form">
                             <mat-form-field appearance="outline">
                                 <mat-label>Guest Name</mat-label>
-                                <input type="text" matInput required formControlName="full_name" placeholder="Enter Full Name" />
+                                <input type="text" matInput required formControlName="gname" placeholder="Enter Full Name" />
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Mobile no.</mat-label>
-                                <input type="tel" matInput required placeholder="Enter Mobile Number" formControlName="mobile_number" />
+                                <input type="number" matInput required placeholder="Enter Mobile Number" formControlName="gphone" />
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Email</mat-label>
-                                <input type="email" matInput required placeholder="Enter Email Address" formControlName="email" />
+                                <input type="email" matInput required placeholder="Enter Email Address" formControlName="gemail" />
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Address</mat-label>
-                                <input type="text" matInput required placeholder="Enter your address" formControlName="address1">
+                                <input type="text" matInput required placeholder="Enter your address" formControlName="gaddress">
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>City</mat-label>
-                                <input type="text" matInput required placeholder="Enter your city" formControlName="city">
+                                <input type="text" matInput required placeholder="Enter your city" formControlName="gcity">
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>State</mat-label>
-                                <input type="text" matInput required placeholder="Enter your state" formControlName="state" >
+                                <input type="text" matInput required placeholder="Enter your state" formControlName="gstate" >
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Country</mat-label>
-                                <input type="text" matInput required placeholder="Enter your country" formControlName="country" >
+                                <input type="text" matInput required placeholder="Enter your country" formControlName="gcountry" >
                             </mat-form-field>
                             <mat-form-field appearance="outline" class="mt-3">
                                 <mat-label>Pincode</mat-label>
-                                <input type="tel" matInput required placeholder="Enter your pincode" formControlName="pincode" >
+                                <input type="number" matInput required placeholder="Enter your pincode" formControlName="gpincode" >
                             </mat-form-field>
-                            <button class="btn btn-primary w-100 mt-1">Submit</button>
+                            <button class="btn btn-primary w-100 mt-1" (click)="submitBooking()">Submit</button>
                             <section class="booking-terms mt-4">
                                 <h5 class="mb-3">Review the terms before booking.</h5>
                                 <div class="row row-cols-1 row-cols-md-2 g-4">
