summary redesign-bala

--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.scss
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.scss
@@ -13,9 +13,9 @@
 .filter-options,
 .sort {
   background-color: #f8f9fa;
-  padding: 15px;
+  // padding: 15px;
   margin-bottom: 20px;
-  border-radius: 15px;
+  // border-radius: 15px;
 }
 
 .card {
@@ -29,63 +29,67 @@
   display: inline-block;
   font-size: 1.5rem;
   color: #ffd700;
+
   &::before {
     content: '\2605\2605\2605\2605';
   }
+
   &::after {
     content: '\2606';
     margin-left: 3px;
   }
-  
+
 }
 
 
-aside{
+aside {
   background-color: hsl($hue-primary, $saturation-primary, 85%);
   padding: 20px;
 
-  @media(min-width:768px){
-    flex-basis: 35%;
-    // position: relative;
-    
-  }
-  .booking-summary-bar {
-    background-color: $clr-secondary;
-    color: $white;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
+
+  @media(min-width:768px) {
+    // flex-basis: 35%;
+    top: 5%;
+    // margin-top: 2rem;
+    // bottom: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-    h5{
-      color: $white;
-    }
-  
-    @media(min-width: 768px) {
-      position: sticky;
-      top: 5%;
-      margin-top: 2rem;
-      // overflow-y: auto;
+    // position: relative;
 
-    }
+  }
+
+  .booking-summary-bar {
+    // background-color: $clr-secondary;
+    color: $white;
+    // padding: 10px;
+    // position: fixed;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
+    // z-index: 1000;
+    // h5{
+    //   color: $white;
+    // }
+
+    // @media(min-width: 768px) {
+    //   position: sticky;
+    //   top: 5%;
+    //   margin-top: 2rem;
+    //   // overflow-y: auto;
+
+    // }
   }
 }
-main{
+
+main {
   &.rooms-listing {
+
     // margin-left: 0;
     // transition: margin-left 0.5s;
-    @media(min-width:768px){
-    flex-basis: 65%;
-  
+    @media(min-width:768px) {
+      // flex-basis: 65%;
+
     }
   }
 }
-
-
-
-// .sticky-sidebar {
-//   // position: -webkit-sticky;
-//   position: sticky;
-
-// }
