--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -28,3 +28,8 @@
    .mat-mdc-outlined-button.mat-secondary{
     border: 2px solid $clr-primary!important;
 }
+.mat-mdc-raised-button[disabled]{
+    background-color: lightgray!important;
+    cursor: not-allowed!important;
+    pointer-events: unset!important;
+}
