--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -62,12 +62,16 @@
             </div>
             <!-- Booking Summary section -->
             <div class="booking-summary-bar bg-white text-dark rounded-3 p-3">
-              <h4 class="mb-3">Booking Summary</h4>
-              <h6 class="text-primary-dark mb-1"><strong class="me-2">Cottage Type:</strong>Hill Top Guest House</h6>
-              <div class="d-flex  justify-content-between mb-2">
-                  <span class="text-primary-dark"><strong class="me-2">Room name:</strong>Bonnet</span>
-                  <span><i class="fa fa-trash"></i></span>
+              <h4 class="mb-3 pb-2 font-weight-bold">Booking Summary</h4>
+              <div class="mb-2">
+                <h5 class="text-primary-dark pb-1"><strong class="me-2">Hill Top Guest House</strong></h5>
+                <div class="row">
+                  <i class="fa fa-trash float-end"></i>
+                  <h6><strong class="me-2">Room Bonnet</strong></h6>
+                  <div>2 Adult, 1 Child, 1 Extra Guest</div>
+                </div>
               </div>
+              <hr/>
               <div class="d-flex justify-content-between">
                 <span><strong>Room Tariff</strong></span>
                 <span>INR 2,500.00</span>
@@ -139,116 +143,42 @@
               <p>Loading rooms...</p>
             </div>
           </ng-template>
-          <div class="card mb-3 p-1">
-            <div class="row g-0 d-flex ">
-              <div class="col-md-4">
-                <img src="/assets/img/jungle.jpeg" alt="resort image">
-              </div>
-              <div class="col-md-2 p-3">
-                <h6><span>Room name:</span></h6>
-                <h6><span>Cottage type:</span><br></h6>
-                <span>Adults/Children > 5yrs</span><br><br>
-              </div>
-              <div class="col-md-3 pt-3">
-                <span>Bonnet</span><br>
-                <span>Hill top guest house</span>
-                
-                <span>
-                  <mat-form-field>
-                    <mat-label>Guests</mat-label>
-                    <select matNativeControl required [formControl]="selected">
-                      
-                      <option value="one">1</option>
-                      <option value="two">2</option>
-                      
-                    </select>
-                    <!-- @if (selectFormControl.hasError('required')) {
-                      <mat-error>This field is required</mat-error>
-                    } -->
-                    <mat-hint>2 guests max, including children.</mat-hint>
-                  </mat-form-field>
-                  </span>
-                
-                <span><mat-checkbox [(ngModel)]="isChecked">Extra adult/child over 5</mat-checkbox></span>
-                
 
-              </div>
-              <div class="col-md-3 text-end">
-                <span><br></span>
-                <b><span>INR 2,500.00 + gst @ 12%</span><br></b>
-                <small>all<span>(for 2 guests)</span><br></small>
-                <b><span>INR 500.00 + gst @ 12%</span><br></b>
-                <small><span>(for 1 Extra Bed)</span><br></small><br><br>
-                <span><button class="btn btn-primary">
-                  Add room
-                </button></span>
-              </div>
-
-            </div>
-          </div>
           
           <div *ngIf="!loadingRooms; else loading">
-            <div *ngFor="let room of roomCards" class="card mb-3 p-1">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img [src]="room.image" class="card-img" alt="Room Image" />
+            <div class="card mb-3 p-1" *ngFor="let room of roomCards" >
+              <div class="row g-0 d-flex ">
+                <div class="col-md-3 p-2">
+                  <img [src]="room.image" alt="Resort Room image">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-6 text-start details-left">
-                        <p class="mb-0">
-                          <strong>Room name:</strong> {{ room.name }}
-                        </p>
-                        <p class="mb-0">
-                          <strong>Cottage type:</strong> <br> {{ room.cottage_type }}
-                        </p>
-                        <!-- <div class="input-group">
-                          <button type="button" class="btn" (click)="decrementAdult(room)"> - </button>
-                          <input type="number" name="adult" [(ngModel)]="room.adult_count"
-                            class="form-control text-center ng-untouched ng-pristine ng-valid">
-                          <button type="button" class="btn" (click)="incrementAdult(room)"> + </button>
-                        </div>
-                        <div class="input-group">
-                          <button type="button" class="btn" (click)="decrementChild(room)"> - </button>
-                          <input type="number" name="child" [(ngModel)]="room.child_count"
-                            class="form-control text-center ng-untouched ng-pristine ng-valid">
-                          <button type="button" class="btn" (click)="incrementChild(room)"> + </button>
-                        </div>
-                        <div class="input-group">
-                          <button type="button" class="btn" (click)="decrementGuest(room)"> - </button>
-                          <input type="number" name="guest" [(ngModel)]="room.guest_count"
-                            class="form-control text-center ng-untouched ng-pristine ng-valid">
-                          <button type="button" class="btn" (click)="incrementGuest(room)"> + </button>
-                        </div> -->
-                        <!-- <p><strong>Bed type:</strong> {{ room.bed_type }}</p> -->
-                        <!-- <div class="d-flex gap-2">
-                          <span *ngFor="let amenity of room.amenities">
-                            <span>{{ amenity }}</span>
-                          </span>
-                        </div> -->
-                      </div>
-                      <div class="col-6 details-right text-end">
-                        <!-- <div class="star-rating">{{ room.rating }}</div>
-                        <h5>{{ room.rating }}</h5> -->
-                        <!-- <p class="card-text">WeekDays charges : 
-                          <small class="text-muted">{{ room.weekDayPrice }}</small>
-                        </p>
-                        <p class="card-text">Weekend charges : 
-                          <small class="text-muted">{{ room.weekendPrice }}</small>
-                        </p>
-                        <p class="card-text">WeekDays Guest charges : 
-                          <small class="text-muted">{{ room.weekDayGuestPrice }}</small>
-                        </p>
-                        <p class="card-text">Weekend Guest charges :
-                          <small class="text-muted">{{ room.weekendGuestPrice }}</small>
-                        </p> -->
-                        
-                        <button class="btn btn-primary" (click)="addRoom(room)" [disabled]="room.isButtonDisabled">
-                          Add room
-                        </button>
-                      </div>
-                    </div>
+                <div class="col-md-9 p-3 ps-0 row m-0">
+                  <div class="col-md-8">
+                    <h3>{{ room.name }}</h3>
+                    <h6>{{ room.cottage_type }}, {{ room.resort }}</h6>
+                      <!-- <select name="" class="form-select w-25" id="">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                      </select> -->
+                      <!-- <mat-form-field>
+                        <mat-label>Guests</mat-label>
+                        <select matNativeControl required [formControl]="selected">
+                          <option value="one">1</option>
+                          <option value="two">2</option>
+                        </select>
+                        <mat-hint>2 guests max, including children.</mat-hint>
+                      </mat-form-field>
+                      <mat-checkbox [(ngModel)]="isChecked">Extra adult/child over 5</mat-checkbox> -->
+                  </div>
+                  <div class="col-md-4 text-end">
+                    <h6 class="p-0 m-0"><strong>{{ room.week_day_rate | currency: 'INR': true: '1.2-2' }} + gst @ 12%</strong></h6>
+                    <small>All (for {{ room.max_adult }} guests)</small>
+                    <div><strong>{{ room.week_day_bed_charge | currency: 'INR': true: '1.2-2' }} + gst @ 12%</strong></div>
+                    <small>(for 1 Extra Bed)</small>
+                  </div>
+                  <div class="col-md-12">
+                    <button class="btn btn-primary w-25 float-end" (click)="addRoom(room)" [disabled]="room.is_button_disabled">
+                      Add room
+                    </button>
                   </div>
                 </div>
               </div>
