--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.scss
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.scss
@@ -3,7 +3,9 @@
 .page-banner {
   background-image: url('/assets/img/home-gallery/vanavihari-home-gallery-1.jpg');
 }
-
+.card1{
+  line-height: 2;
+}
 .breadcrumb {
   padding: 10px;
   background-color: #f8f9fa;
