--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -62,74 +62,56 @@
             </div>
             <!-- Booking Summary section -->
             <div class="booking-summary-bar bg-white text-dark rounded-3 p-3">
-              <h4 class="mb-3 pb-2 font-weight-bold">Booking Summary</h4>
-              <div class="mb-2">
-                <h5 class="text-primary-dark pb-1"><strong class="me-2">Hill Top Guest House</strong></h5>
-                <div class="row">
-                  <i class="fa fa-trash float-end"></i>
-                  <h6><strong class="me-2">Room Bonnet</strong></h6>
-                  <div>2 Adult, 1 Child, 1 Extra Guest</div>
+              <h4 class="m-0 pb-1 font-weight-bold">Booking Summary</h4>
+              <div class="border-top py-2" *ngIf="showBookingSummary; else noBookings">
+                <h5 class="text-primary-dark pb-1 m-0"><strong class="me-2">Hill Top Guest House</strong></h5>
+                <div class="pt-2" *ngFor="let roomId of roomIds">
+                  <a href="javascript:void(0)" class="float-end" (click)="removeRoom(roomId, roomId.id)"><i class="fa fa-trash"></i></a>
+                  <div>
+                    <strong class="me-2">Room Name: {{ roomId.name }}</strong>
+                  </div>
+                  <div>
+                    <label for="checkextraguest{{roomId.id}}"><input type="checkbox" #checkextraguest id="checkextraguest{{roomId.id}}" [id]="'checkextraguest' + roomId.id" (change)="checkExtraGuest(roomId, roomId.id, checkextraguest)"> Check any extra guest</label> &nbsp;
+                    <input type="number" value="{{roomId.noof_guest}}" min="1" max="{{roomId.max_guest}}" #checkextraguestcount id="checkextraguestcount{{roomId.id}}" class="w-auto text-center" [id]="'checkextraguestcount' + roomId.id" (change)="checkExtraGuest(roomId, roomId.id, checkextraguestcount)" *ngIf="roomId.noof_guest>0&&roomId.max_guest>1">
+                  </div>
+                  <small>
+                      {{ roomId.noof_adult }} Adult{{ roomId.noof_adult>1?'s':'' }}
+                      {{ roomId.noof_child>0?', '+roomId.noof_child+' Child'+(roomId.noof_child>1?'s':''):'' }}
+                      {{ roomId.noof_guest>0?', '+roomId.noof_guest+' Extra Guest'+(roomId.noof_guest>1?'s':''):'' }}
+                      <span class="float-end pb-0 m-0">{{ roomId.week_day_rate+(roomId.week_day_bed_charge*roomId.noof_guest) | currency:'INR':'symbol':'1.2-2' }}</span>
+                  </small>
                 </div>
               </div>
               <hr/>
-              <div class="d-flex justify-content-between">
+              <div class="d-flex justify-content-between pt-1">
                 <span><strong>Room Tariff</strong></span>
-                <span>INR 2,500.00</span>
+                <span>{{ calculateTotalPrice() | currency:'INR ':'symbol':'1.2-2' }}</span>
               </div>
               <div class="d-flex justify-content-between border-bottom border-primary pb-2">
                 <span><strong>GST @ 12%</strong></span>
-                <span>INR 300.00</span>
+                <span>{{ calculateTotalGst() | currency:'INR ':'symbol':'1.2-2' }}</span>
               </div>
-              <div class="d-flex justify-content-between font-weight-bold py-1">
+              <!-- <div class="d-flex justify-content-between font-weight-bold py-1">
                 <span class="mb-0">Total</span>
-                <span>INR 3,000.00</span>
-              </div>
+                <span>{{ calculatePayablePrice() | currency:'INR ':'symbol':'1.2-2' }}</span>
+              </div> -->
               <div class="d-flex justify-content-between border-top border-bottom border-primary py-2 font-weight-bold text-secondary h5">
                 <span class="mb-0">Grand Total</span>
-                <span>INR 3,000.00</span>
+                <span>{{ calculatePayablePrice() | currency:'INR ':'symbol':'1.2-2' }}</span>
               </div>
-              <button mat-raised-button color="primary" class="w-100 mt-3" disabled>
+              <button mat-raised-button color="primary" class="w-100 mt-3" (click)="goToBooking()" *ngIf="showBookingSummary">
                 Proceed
               </button>
-            </div>
-            <div class="booking-summary-bar" *ngIf="showBookingSummary; else noBookings">
-              <div *ngFor="let roomId of roomIds" class="card mb-3 p-2">
-                <div class="row align-items-center">
-                  <div class="col-md-10">
-                    <p>{{ roomId.cottage_type }}</p>
-                  </div>
-                  <div class="col-md-2 text-end">
-                    <a href="javascript:void(0)" (click)="removeRoom(roomId, roomId.id)"><i class="fa fa-trash"></i></a>
-                  </div>
-                  <div class="col-md-12">
-                    <b>{{ roomId.name }}</b> : {{ roomId.adult_count }} Adult{{ roomId.adult_count>1?'s':'' }}
-                    {{ roomId.child_count?', '+roomId.child_count+' Child'+(roomId.child_count>1?'s':''):'' }}
-                    {{ roomId.guest_count?', '+roomId.guest_count+' Guest'+(roomId.guest_count>1?'s':''):'' }}
-                  </div>
-                  <div class="col-md-12 text-end">
-                    <b>Charges:</b> {{ roomId.weekDayPrice | currency:'INR':'symbol':'1.2-2' }}
-                  </div>
-                </div>
-              </div>
-            
-              <div class="row align-items-center px-3">
-                Total Room Price: {{ calculateTotalPrice() | currency:'INR':'symbol':'1.2-2' }} + GST @12%
-                <button class="btn btn-primary float-end" (click)="goToBooking()">Proceed</button>
-              </div>
             </div>
             <ng-template #noBookings>
               <!-- <div class="text-center mt-3">
                 <p>No Bookings Available. Please Add Rooms.</p>
               </div> -->
-              <h5 class="text-center"><u>Booking Summary</u></h5>
+              <!-- <h5 class="text-center"><u>Booking Summary</u></h5> -->
               <div class="d-flex my-2 p-3 align-items-center justify-content-around">
                 <i class="fa fa-plus" aria-hidden="true"></i>
-                <p>Add your preferred rooms
-                </p>
+                <p class="m-0">Add your preferred rooms</p>
               </div>
-              <button mat-raised-button color="primary" class="w-100" disabled>
-                Proceed
-              </button>
             </ng-template>
           <!-- </section> -->
         </aside>
@@ -155,6 +137,9 @@
                   <div class="col-md-8">
                     <h3>{{ room.name }}</h3>
                     <h6>{{ room.cottage_type }}, {{ room.resort }}</h6>
+                      {{ room.max_adult }} Adult{{ room.max_adult>1?'s':'' }}
+                      {{ room.max_child?', '+room.max_child+' Child'+(room.max_child>1?'s':''):'' }}
+                      {{ room.max_guest?', '+room.max_guest+' Extra Guest'+(room.max_guest>1?'s':''):'' }}
                       <!-- <select name="" class="form-select w-25" id="">
                         <option value="">1</option>
                         <option value="">2</option>
