myprofile/Booking Summary - changes 11 - 19-03-2023

--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -197,7 +197,7 @@
                   </div>
                   <div class="col-md-4 text-end">
                     <h6 class="p-0 m-0"><strong>{{ room.week_day_rate | currency: 'INR': true: '1.2-2' }} + gst @ 12%</strong></h6>
-                    <small>All (for {{ room.max_adult }} guests)</small>
+                    <small>(for {{ room.max_adult }} guests)</small>
                     <div><strong>{{ room.week_day_bed_charge | currency: 'INR': true: '1.2-2' }} + gst @ 12%</strong></div>
                     <small>(for 1 Extra Bed)</small>
                   </div>
