--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -60,11 +60,42 @@
                 </mat-select>
               </mat-form-field>
             </div>
+
+
+            <!-- <div class="booking-summary-bar bg-white text-dark rounded-3 p-3">
+              <h4 class="m-0 pb-1 font-weight-bold">Booking Summary</h4>
+              <span>Pre-fabricated Cottage</span>
+              <div class="d-flex justify-content-between pt-1">
+                <span><strong>Bear</strong></span>
+                <span><i class="fa fa-trash"></i></span>
+              </div>
+              <div class="d-flex justify-content-between pt-1">
+
+                <span><strong>Total room charges</strong></span><br><br>
+                <span>INR 2500.00</span>
+              </div>
+              <div class="d-flex justify-content-between pb-2">
+                <span>
+                  <mat-form-field appearance="outline">
+                    <mat-label>No. of. Guests</mat-label>
+                    <mat-select required [(ngModel)]="selected" >
+                    <mat-option value="one">1</mat-option>
+                    <mat-option value="two">2</mat-option>
+                    <mat-option value="three">3</mat-option>
+
+                    </mat-select> 
+                    <mat-hint>Adults/Child over 5 yrs</mat-hint>
+                  </mat-form-field>
+                  
+                </span>
+              </div>
+            </div>
+             -->
             <!-- Booking Summary section -->
             <div class="booking-summary-bar bg-white text-dark rounded-3 p-3">
               <h4 class="m-0 pb-1 font-weight-bold">Booking Summary</h4>
               <div class="border-top py-2" *ngIf="showBookingSummary; else noBookings">
-                <!-- <h5 class="text-primary-dark pb-1 m-0"><strong class="me-2">Hill Top Guest House</strong></h5> -->
+                <h5 class="text-primary-dark pb-1 m-0"><strong class="me-2">Hill Top Guest House</strong></h5>
                 <div class="pt-2" *ngFor="let roomId of roomIds">
                   <a href="javascript:void(0)" class="float-end" (click)="removeRoom(roomId, roomId.id)"><i class="fa fa-trash"></i></a>
                   <div>
@@ -91,10 +122,10 @@
                 <span><strong>GST @ 12%</strong></span>
                 <span>{{ calculateTotalGst() | currency:'INR ':'symbol':'1.2-2' }}</span>
               </div>
-              <!-- <div class="d-flex justify-content-between font-weight-bold py-1">
+              <div class="d-flex justify-content-between font-weight-bold py-1">
                 <span class="mb-0">Total</span>
                 <span>{{ calculatePayablePrice() | currency:'INR ':'symbol':'1.2-2' }}</span>
-              </div> -->
+              </div> 
               <div class="d-flex justify-content-between border-top border-bottom border-primary py-2 font-weight-bold text-secondary h5">
                 <span class="mb-0">Grand Total</span>
                 <span>{{ calculatePayablePrice() | currency:'INR ':'symbol':'1.2-2' }}</span>
